# datafusion-postgres

./: .gitignore  CUSTOM_AUTH.md  Cargo.toml  PASSWORD_ENFORCEMENT.md  PROGRESS.md  README.md  analyze_pg_catalog_tables.sh  debug_test.py  flake.nix  test_basic_auth.py  test_custom_auth_example.sh  test_secure_auth_example.sh  test_simple_auth.py  test_wrong_password.py
.github/workflows/: ci.yml
arrow-pg/: Cargo.toml
arrow-pg/examples/: duckdb.rs
arrow-pg/src/: datatypes.rs  encoder.rs  geo_encoder.rs  lib.rs  list_encoder.rs  row_encoder.rs  struct_encoder.rs
arrow-pg/src/datatypes/: df.rs
datafusion-pg-catalog/: Cargo.toml  export_pg_catalog_arrow.sh  pg_to_arrow.py
datafusion-pg-catalog/benches/: parser_benchmark.rs
datafusion-pg-catalog/pg_catalog_arrow_exports/: pg_aggregate.feather  pg_am.feather  pg_amop.feather  pg_amproc.feather  pg_attrdef.feather  pg_attribute.feather  pg_auth_members.feather  pg_authid.feather  pg_cast.feather  pg_class.feather  pg_collation.feather  pg_constraint.feather  pg_conversion.feather  pg_database.feather  pg_db_role_setting.feather  pg_default_acl.feather  pg_depend.feather  pg_description.feather  pg_enum.feather  pg_event_trigger.feather  pg_extension.feather  pg_foreign_data_wrapper.feather  pg_foreign_server.feather  pg_foreign_table.feather  pg_index.feather  pg_inherits.feather  pg_init_privs.feather  pg_language.feather  pg_largeobject.feather  pg_largeobject_metadata.feather  pg_namespace.feather  pg_opclass.feather  pg_operator.feather  pg_opfamily.feather  pg_parameter_acl.feather  pg_partitioned_table.feather  pg_policy.feather  pg_proc.feather  pg_publication.feather  pg_publication_namespace.feather  (+24 more)
datafusion-pg-catalog/src/: pg_catalog.rs
datafusion-pg-catalog/src/pg_catalog/: array_bounds_udf.rs  format_type.rs  generate_series_arg_coercion.rs  has_privilege_udf.rs  oid_coercion_rule.rs  oid_field.rs  oid_type_planner.rs  pg_attribute.rs  pg_class.rs  pg_database.rs  pg_get_expr_udf.rs  pg_locks.rs  pg_namespace.rs  pg_stat_ssl.rs  pg_tablespace.rs  pg_timezone.rs  quote_ident_udf.rs
datafusion-pg-catalog/src/sql/: parser.rs  rules.rs
datafusion-pg-functions/: Cargo.toml  functions.md
datafusion-pg-functions/examples/: enumerate_udfs.rs
datafusion-pg-functions/src/: array.rs  binary.rs  bitstring.rs  conditional.rs  crypto.rs  datetime.rs  enum_type.rs  format.rs  geometric.rs  json.rs  lib.rs  network.rs  numeric.rs  range.rs  row.rs  sequence.rs  string.rs  system.rs  text_search.rs  uuid.rs  xml.rs
datafusion-pg-functions/src/numeric/: aliases.rs  degree_trig.rs  div.rs  mod_op.rs  random_normal.rs  special.rs  width_bucket.rs
datafusion-pg-functions/tests/: sqllogictest.rs
datafusion-pg-functions/tests/sqllogictest/: math.slt
datafusion-postgres/: Cargo.toml
datafusion-postgres-cli/: Cargo.toml
datafusion-postgres-cli/src/: main.rs
datafusion-postgres/src/: auth.rs  handlers.rs  lib.rs  pg_catalog.rs  planner.rs  sql.rs  testing.rs
datafusion-postgres/src/hooks/: cursor.rs  mod.rs  permissions.rs  prepare_execute.rs  set_show.rs  transactions.rs
datafusion-postgres/src/pg_catalog/: format_type.rs  pg_attribute.rs  pg_database.rs  pg_get_expr_udf.rs  pg_roles.rs  pg_views.rs
datafusion-postgres/src/sql/: blacklist.rs  parser.rs  rules.rs
datafusion-postgres/tests/: array_bounds.rs  datagrip.rs  dbeaver.rs  metabase.rs  pgadbc.rs  pgcli.rs  psql.rs
datafusion-postgres/tests/common/: mod.rs
docs/: 2026-02-21-14-37-33-compatibility-notes-parameter-status.md  2026-02-21-15-03-58-pgwire-datafusion-overview.md  PROGRESS.md
docs/plans/: 2026-02-21-parameter-status-on-set.md  2026-02-23-hookoutput-and-sink-access.md  2026-02-23-pgwire-compat.md  2026-02-23-prepare-plan-execute.md
docs/work/: parameter-status-refactor.md
examples/: custom_auth.rs  custom_auth_server.rs  secure_auth_server.rs  test_basic_auth.rs
tests/: probe_blacklist_removal.rs
tests-integration/: README.md  test.sh  test_csv.py  test_custom_auth_simple.py  test_fdw.py  test_parquet.py  test_password_enforcement.py  test_postgis.py  test_transactions.py
tests-integration/custom_auth_test/: Cargo.toml
tests-integration/custom_auth_test/src/: main.rs
