[workspace]
resolver = "2"
members = ["datafusion-postgres", "datafusion-postgres-cli", "arrow-pg", "datafusion-pg-catalog"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.89"
authors = ["Ning Sun <n@sunng.info>"]
keywords = ["database", "postgresql", "datafusion"]
homepage = "https://github.com/datafusion-contrib/datafusion-postgres/"
repository = "https://github.com/datafusion-contrib/datafusion-postgres/"
documentation = "https://docs.rs/crate/datafusion-postgres/"

[workspace.dependencies]
arrow = "57"
arrow-schema = "57"
bytes = "1.11.0"
chrono = { version = "0.4", features = ["std"] }
datafusion = { version = "52", default-features = false }
futures = "0.3"
pgwire = { version = "0.37", default-features = false }
postgres-types = "0.2"
rust_decimal = { version = "1.39", features = ["db-postgres"] }
tokio = { version = "1", default-features = false }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
