[package]
name = "arrow-pg"
description = "Arrow data mapping and encoding/decoding for Postgres"
version = "0.9.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"
rust-version.workspace = true

[features]
default = ["arrow", "geo"]
arrow = ["dep:arrow"]
datafusion = ["dep:datafusion"]
geo = ["postgres-types/with-geo-types-0_7", "dep:geoarrow", "dep:geoarrow-schema"]

[dependencies]
arrow = { workspace = true, optional = true }
arrow-schema = { workspace = true}
geoarrow = { version = "0.7", optional = true }
geoarrow-schema = { version = "0.7", optional = true }
bytes.workspace = true
chrono.workspace = true
datafusion = { workspace = true, optional = true }
futures.workspace = true
pgwire = { workspace = true, default-features = false, features = ["server-api", "pg-ext-types"] }
postgres-types.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1.49", features = ["full"]}
