[package]
name = "custom-auth-test-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "custom-auth-test-server"
path = "src/main.rs"

[dependencies]
datafusion-postgres = { path = "../datafusion-postgres" }
datafusion = "42"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
